doc ap swagger financial entry
